# attack_data

./: .gitattributes  .gitignore  LICENSE  README.md  scanner.py  scanner_detections.py
.github/: VALIDATION_WORKFLOWS.md  validate_dataset_ymls.py
.github/workflows/: mirror_data_archive.yml  replay-datasets.yml  required-checks.yml  validate-changed-files.yml  validate-pr.yml  validate-push.yml  validate.yml
attack_data_service/: Dockerfile  README.md  attack_data_service.py  requirements.txt
attack_data_service/templates/: PR_template_attack_data.j2
datasets/: .gitattributes  TEMPLATE.yml
datasets/T1003.001/: dataset.yml  dump_lsass_exe_memory_using_comsvcs_dll.yml  windows_credential_editor.yml
datasets/T1003.002/: dataset.yml
datasets/T1003.003/: dataset.yml
datasets/T1016/: discovery_commands.yml
datasets/T1021.002/: dataset.yml
datasets/T1027/: dataset.yml
datasets/T1036.003/: dataset.yml  samsam_extension.yml
datasets/T1047/: dataset.yml
datasets/T1053.005/: dataset.yml
datasets/T1059.001/: hidden_powershell.yml  (+1 more)
environments/: TEMPLATE.md  attack_range.md  attack_range_evilginx2.md
replay_script/: .gitattributes
scripts/: .env.example  README.md  detection_utils.py  dynamo_utils.py  memory_store.py  migrate.py  requirements.txt  splunk_search.py
total_replay/: .gitignore  CLAUDE.md  detection_results.jsonl  pyproject.toml  readme.md  run_detections.py  total_replay.py
total_replay/configuration/: config.yml
total_replay/test/: test_names.txt
total_replay/utility/: color_print.py  utility_helper.py
(+3426 files in other folders)
