[project]
name = "total-replay"
version = "0.1.0"
description = "Attack Data Replay Amplifier"
authors = [
    {name = "Teoderick Contreras",email = "tcontreras@splunk.com"}
]
license = {text = "Apache License"}
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.6.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "ansible-runner (>=2.4.2,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
